--- a/06_Dom/one.html
+++ b/06_Dom/one.html
@@ -11,7 +11,7 @@
         }
     </style>
     <!-- title.innerText->browser e thaka present  heading element e dekabe
-    title.textContent->jeta display ba css property die sorie dieche
+    title.textContent->jeta display ba css property die sorie dieche setao brower e dekai
     title.innerHTML ->browser e present element er sathe sathe main heading e present thaka tag o access kora jai
     node list -> theke kichu access korar jonno foreach loop lagie seta ke array te convert kora hoy
     html collection -> 
