--- a/06_Dom/four.html
+++ b/06_Dom/four.html
@@ -32,16 +32,18 @@
 
     //Edit
     const secondLang = document.querySelector("li:nth-child(2)")
+   
     // secondLang.innerHTML = "Mojo"
     const newli = document.createElement('li')
     newli.textContent  = "mojo"
+ 
     secondLang.replaceWith(newli)
 
     const firstLang = document.querySelector("li:first-child")
     firstLang.outerHTML = '<li>Typescript</li>'
 
 
-    //remove
+    // //remove
     const lastLang = document.querySelector('li:last-child')
     lastLang.remove()
 
