--- a/06_Dom/three.html
+++ b/06_Dom/three.html
@@ -10,17 +10,17 @@
 </body>
 <script>
     const div = document.createElement('div')
-    console.log(div)
-    div.className = "main"
-    div.id = Math.round(Math.random()*10 +1)
-    div.setAttribute("title","generated title")
-    div.style.backgroundColor = "green"
-    div.style.padding ="12px"
-    //div.innerText = "chai aur code"
+    // console.log(div)
+     div.className = "main"
+     div.id = Math.round(Math.random()*10 +1)
+     div.setAttribute("title","generated title")
+     div.style.backgroundColor = "green"
+     div.style.padding ="12px"
+    // div.innerText = "chai aur code"
     const addText = document.createTextNode("chai aur code")
     div.appendChild(addText)
-
-    document.body.appendChild(div)
+    //console.log(div)
+     document.body.appendChild(div)
     
 
 </script>
