--- a/06_Dom/two.html
+++ b/06_Dom/two.html
@@ -8,32 +8,32 @@
 </head>
 <body style="background-color: #212121; color:#fff;">
     
-            <div class="parent">
+    <div class="parent">
                 <div class="day">Monday</div>
                 <div class="day">tuesday</div>
                 <div class="day">wednesday</div>
                 <div class="day">thursday</div>
-            </div>
+            
     </div>
 </body>
 <script>
    const parent =  document.querySelector('.parent')
-  // console.log(parent);
-//   console.log(parent.children);//html collection
-//    console.log(parent.children[1].innerHTML);
+//    console.log(parent);
+//    console.log(parent.children);//html collection
+//     console.log(parent.children[1].innerHTML);
 
 //    for (let i = 0; i < parent.children.length; i++) {
 //     console.log(parent.children[i].innerHTML);
 //    }
 
-   parent.children[1].style.color = "orange";
-   //console.log(parent.firstElementChild);
-   //console.log(parent.lastElementChild);
+//    parent.children[1].style.color = "orange";
+//    console.log(parent.firstElementChild);
+//    console.log(parent.lastElementChild);
 
     const dayOne =  document.querySelector('.day')
-    console.log(dayOne);
-    console.log(dayOne.parentElement);
-    console.log(dayOne.nextElementSibling);
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);//child element theke parent element e nie jai
+    // console.log(dayOne.nextElementSibling);
 
 
     console.log("NODES: ",parent.childNodes);//nodelist
