--- a/10_async_proj/two.html
+++ b/10_async_proj/two.html
@@ -7,22 +7,22 @@
 </head>
 <body>
     <h1>chai aur hum</h1>
+    <button id="start">start</button>
     <button id="stop">stop</button>
 </body>
 <script>
-    // const sayHitesh = function(){
-    //     console.log("hitesh");
-    // }
-    const changeText = function(){
-        document.querySelector('h1').innerHTML="best js series"
+    const sayDate = function(str){
+        console.log(str,Date.now());
     }
-
-    const changeMe = setTimeout(changeText,2000);
-    
+    const intervalId = document.querySelector('#start').addEventListener('click',function(){
+        setInterval(sayDate,1000,"hi");
+    })
+    //const intervalId = setInterval(sayDate,1000,"hi");
     document.querySelector('#stop').addEventListener('click',function(){
-        clearTimeout(changeMe)
+        clearInterval(intervalId);
     })
     
+
 
 
 </script>
