--- a/10_async_proj/two.html
+++ b/10_async_proj/two.html
@@ -14,10 +14,12 @@
     const sayDate = function(str){
         console.log(str,Date.now());
     }
-    const intervalId = document.querySelector('#start').addEventListener('click',function(){
-        setInterval(sayDate,1000,"hi");
+    let intervalId;
+    document.querySelector('#start').addEventListener('click',function(){
+         intervalId = setInterval(sayDate,1000,"hi");
+       
     })
-    //const intervalId = setInterval(sayDate,1000,"hi");
+    
     document.querySelector('#stop').addEventListener('click',function(){
         clearInterval(intervalId);
     })
